--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +13,19 @@
         }
     </style>
 </head>
+
 <body>
 
-    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Magnam, laboriosam aliquam? Nulla eius modi culpa a ea
+        optio quisquam suscipit.</h1>
+
+        <ul>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Aliquam delectus natus voluptate nesciunt!</li>
+            <li>Exercitationem nisi qui quisquam eligendi.</li>
+        </ul>
 
 </body>
+
 </html>
