--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIT</title>
+    <title>New title</title>
     <style>
         * {
             padding: 0;
@@ -13,8 +13,5 @@
     </style>
 </head>
 <body>
-
-    <h1>Lorem ipsum dolor sit amet.</h1>
-
 </body>
 </html>
