--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
   <main>
      Main
   </main>
-  <footer>
-      Footer
-  </footer>
+  <footer class="footer">
+    <div class="container f_content">
+       <ul class="f_ul">
+       <li><a class="f_text1" href="#">Учебные пособия</a></li>
+       <li><a class="f_text2" href="#">Официальные сайты</a></li>
+       <li><a class="f_text3" href="#">Git-хостинг</a></li>
+       </ul>
+       <a class="img" href="#"><img src="img/git.jpg" alt="#"/></a>
+       <p>Git — распределённая система управления версиями. </p>>
+       </div> 
+    </div>
+ </footer>
 </body>
 </html>
