--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 </head>
 <body>
   <header>
-      Header
+      <div class="wrapper">
+        <nav>
+            <ul class="menu">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Catalog</a></li>
+                <li><a href="#">Our team</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <div class="prom">
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo est fugiat recusandae illum laudantium totam.</p>
+        </div>
+      </div>
+      
   </header>
   <main>
      Main
