--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
   <main>
      Main
   </main>
-  <footer>
-      Footer
+  <footer class="footer-contact">
+
+        <div class="copyright">© Copyright 2014 FreebiesXpress.com</div>
+
+        <div class="item-social">
+            <a href="#" class="social tw"></a>
+            <a href="#" class="social fc"></a>
+            <a href="#" class="social p"></a>
+            <a href="#" class="social g"></a>
+        </div>
+
   </footer>
 </body>
 </html>
