--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       Header
   </header>
   <main>
-     Main
+     <div class="main_img">
+        <img src="img/📷 Image.png">
+         <h2>Вкусные суши</h2>
+         <p>Большой выбор и бесплатноя доставка!</p>
+         <button>Жми</button>
+         </div>
   </main>
   <footer>
       Footer
