--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
   <main>
      Main
   </main>
-  <footer>
-      Footer
-  </footer>
+<footer>
+        <div class="footer-menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>&copy Copyright 2021 Lorem ipsun</p>
+        </div>
+</footer>
 </body>
 </html>
