--- a/ClassroomWork1/index.html
+++ b/ClassroomWork1/index.html
@@ -11,7 +11,7 @@
   </header>
   <main>
      <div class="main_img">
-        <img src="img/📷 Image.png">
+        <img src="img/📷%20Image.png">
          <h2>Вкусные суши</h2>
          <p>Большой выбор и бесплатноя доставка!</p>
          <button>Жми</button>
