--- a/Homework_JS_2/task5.html
+++ b/Homework_JS_2/task5.html
@@ -5,6 +5,7 @@
     <title>Task5</title>
 </head>
 <body>
+// Задание 5
 <script>
     var a = 10;
     var b =2;
@@ -22,5 +23,37 @@
         document.write ('Квадрат суммы =', + sqa);
     }
 </script>
+// Задание 6
+<script>
+    if (11 > window.a > 2 || 14 > window.b>=6) {
+        document.write('Верно')
+    }
+    else {
+        document.write('Не верно')
+    }
+</script>
+//Задание 7 "Не работает" Не хватило времени(
+<!--<script>-->
+<!--    let n = prompt("Введите число",);-->
+
+<!--    if (0<n<16) {-->
+<!--        alert('Первая четверть');-->
+<!--    }-->
+<!--    else if (15<n<31) {-->
+<!--            alert('Вторая четверть' + n);-->
+<!--        }-->
+<!--    else if (30<n<46) {-->
+<!--            alert('Третья четверть' + n);-->
+<!--        }-->
+<!--    else if (45<n<60) {-->
+
+<!--            alert('Четвертая четверть' + n);-->
+<!--        }-->
+<!--    else {-->
+<!--            alert ("Введите число",);-->
+<!--        }-->
+
+
+<!--</script>-->
 </body>
 </html>
